--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
-						<h1>Alexandre Van Dessoliers<br />
-						Portfolio</h1>
-						<p>Data Analyst skilled in SQL, Tableau, and Python
+					<!-- <div id="intro"> -->
+						<!-- <h1>Alexandre Van Dessoliers<br /> -->
+						<!-- Portfolio</h1> -->
+						<!-- <p>Data Analyst skilled in SQL, Tableau, and Python -->
 							<!-- <br><a href="https://www.linkedin.com/in/adessoliers/">Linkedin</a> -->
 							<!-- <br><a href="https://github.com/adessoliers">Github</a> -->
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+						<!-- <ul class="actions"> -->
+							<!-- <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li> -->
+						<!-- </ul> -->
+					<!-- </div> -->
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Let's Dive in!</a>
+						<!-- <a href="index.html" class="logo">Let's Dive in!</a> -->
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
+							<li><a href="generic.html">About Me</a></li>
 							<li class="active"><a href="index.html">Projects</a></li>
-							<!-- <li><a href="generic.html">Generic Page</a></li> -->
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
