--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h1>About Me<br />
 									</h1>
-									<p>Hello, my name is Alex and I am an <b>aspiring data analyst</b>. I hold a Bachelor's degree in Healthcare Administration
-										and completed a data analytics & visualizations bootcamp program (UCI Division of Continuing Education, CSU Long Beach).<br />
-									<br>Since I was young, I always enjoyed games and solving puzzles. When it comes to big datasets, to me, it is one big puzzle I want to solve.
-										Identifying patterns nobody else sees is what excites and challenges me the most.<br />
-									<br>Before I decided to focus into data analytics, I had worked a minimum <b>five years in a hospital and corporate setting</b> 
-										interacting with patients and physicians. Patient and financial data as well as leading a team is where I thrive in ensuring the best quality outcome for all.
+									<p>Hello, my name is Alex and I am a <b>data analyst</b>. I hold a Bachelor's degree in Healthcare Administration (CSU Long Beach)
+										and completed a data analytics & visualizations bootcamp program (UCI Division of Continuing Education).<br/>
+									<br>Since I was young, I always enjoyed games and solving puzzles. Big datasets, to me, is one big puzzle I want to solve.
+										Identifying patterns nobody else sees is exciting and I enjoy the challenge.<br />
+									<br>Before I decided to focus into data analytics, I had worked a minimum <b>five years in a hospital and corporate setting</b>-interacting with patients and physicians. In any case, I work rigorously to ensure best quality work and results. I am a confident team leader and in combination with my background in healthcare and financial data analysis, I believe I am a strong asset to any team.
 									</p>
 								</header>
 								<!-- <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
@@ -103,7 +102,7 @@
 								</p>
 							</section>
 							<section>
-								<h3>Phone(Cell)</h3>
+								<h3>Phone</h3>
 								<p><a href="#">(714) 800-9650</a></p>
 							</section>
 							<section>
@@ -123,9 +122,9 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
+					<!-- <div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+					</div> -->
 
 			</div>
 
