--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="generic.html">About Me</a></li>
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="index.html">About Me</a></li>
+							<li class="active"><a href="projects.html">Projects</a></li>
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
@@ -58,7 +58,7 @@
 									
 									<h2><a href="https://github.com/adessoliers/HousingProject/blob/main/NashvilleHousingQueries.sql">Data Cleaning in SQL
 									</a></h2>
-									<p>In this project we take housing data and transform<br>it in SQL Server for more usable analysis.</p>
+									<p><center>In this project we take housing data and transform it in SQL Server for more usable analysis.</center></p>
 								</header>
 								<a href="https://github.com/adessoliers/HousingProject/blob/main/NashvilleHousingQueries.sql" class="image main"><img src="images/Housing.jpg" alt="Houses" /></a>
 								<ul class="actions special">
@@ -75,7 +75,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/adessoliers/CovidSQLProject" class="image fit"><img src="images/Covid.jpg" alt="Covid" /></a>
-									<p>Exploration of Covid 19 Dataset in SQL Server.</p>
+									<p><center>Exploration of Covid 19 Dataset in SQL Server.</center></p>
 									<ul class="actions special">
 										<li><a href="https://github.com/adessoliers/CovidSQLProject" class="button">View Project</a></li>
 									</ul>
@@ -87,7 +87,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/alexandre.dessoliers" class="image fit"><img src="images/Tableau.jpg" alt="Tableau" /></a>
-									<p>This holds all of my Tableau Dashboards.</p>
+									<p><center>This holds all of my Tableau Dashboards.</center></p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/alexandre.dessoliers" class="button">View Project</a></li>
 									</ul>
@@ -99,7 +99,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/adessoliers/CorrelationProject" class="image fit"><img src="images/Movie.jpeg" alt="" /></a>
-									<p>In this project we use Python to identify what features have the strong correlations towards gross revenue.</p>
+									<p><center>In this project we use Python to identify what features have the strong correlations towards gross revenue.</center></p>
 									<ul class="actions special">
 										<li><a href="https://github.com/adessoliers/CorrelationProject" class="button">View Project</a></li>
 									</ul>
@@ -189,7 +189,7 @@
 								</p>
 							</section>
 							<section>
-								<h3>Phone(Cell)</h3>
+								<h3>Phone</h3>
 								<p><a href="#">(714) 800-9650</a></p>
 							</section>
 							<section>
@@ -209,9 +209,9 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
+					<!-- <div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+					</div> -->
 
 			</div>
 
