--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">Welcome to my site!</a>
+					<!-- <a href="index.html" class="logo">Welcome</a> -->
 				</header>
 
 				<!-- Nav -->
@@ -60,9 +60,10 @@
 									</h1>
 									<p>Hello, my name is Alex and I am a <b>data analyst</b>. I hold a Bachelor's degree in Healthcare Administration (CSU Long Beach)
 										and completed a data analytics & visualizations bootcamp program (UCI Division of Continuing Education).<br/>
-									<br>Since I was young, I always enjoyed games and solving puzzles. Big datasets, to me, is one big puzzle I want to solve.
+									<br>Since I was young, I always enjoyed games and solving puzzles. Big datasets to me are informative puzzles I want to solve.
 										Identifying patterns nobody else sees is exciting and I enjoy the challenge.<br />
-									<br>Before I decided to focus into data analytics, I had worked a minimum <b>five years in a hospital and corporate setting</b>-interacting with patients and physicians. In any case, I work rigorously to ensure best quality work and results. I am a confident team leader and in combination with my background in healthcare and financial data analysis, I believe I am a strong asset to any team.
+									<br>Before I decided to focus into data analytics, I had worked over <b>five years in a hospital and corporate setting</b> interacting with patients and physicians. As a confident team leader and in combination with my background in healthcare and financial data analysis, I am a strong asset to any team.<br/>
+									<br>Do you want to collaborate? Please contact me by e-mail.
 									</p>
 								</header>
 								<!-- <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
@@ -103,11 +104,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(714) 800-9650</a></p>
+								<p><a href="tel:714-800-9650">(714) 800-9650</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">alexdessoliers@yahoo.com</a></p>
+								<p><a href="mailto: alexdessoliers@yahoo.com">alexdessoliers@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
