--- a/projects.html
+++ b/projects.html
@@ -56,13 +56,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/adessoliers/HousingProject/blob/main/NashvilleHousingQueries.sql">Data Cleaning in SQL
+									<h2><a href="https://github.com/adessoliers/HousingProject">Data Cleaning in SQL
 									</a></h2>
-									<p><center>In this project we take housing data and transform it in SQL Server for more usable analysis.</center></p>
+									<p><center>Transforming housing data in SQL Server for more usable analysis.</center></p>
 								</header>
-								<a href="https://github.com/adessoliers/HousingProject/blob/main/NashvilleHousingQueries.sql" class="image main"><img src="images/Housing.jpg" alt="Houses" /></a>
+								<a href="https://github.com/adessoliers/HousingProject" class="image main"><img src="images/Housing.jpg" alt="Houses" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/adessoliers/HousingProject/blob/main/NashvilleHousingQueries.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/adessoliers/HousingProject" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -99,7 +99,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/adessoliers/CorrelationProject" class="image fit"><img src="images/Movie.jpeg" alt="" /></a>
-									<p><center>In this project we use Python to identify what features have the strong correlations towards gross revenue.</center></p>
+									<p><center>Utilizing Python to identify what features have the strong correlations towards gross revenue.</center></p>
 									<ul class="actions special">
 										<li><a href="https://github.com/adessoliers/CorrelationProject" class="button">View Project</a></li>
 									</ul>
