--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									</h1>
 									<p>Hello, my name is Alex and I am a <b>data analyst</b>. I hold a Bachelor's degree in Healthcare Administration (CSU Long Beach)
 										and completed a data analytics & visualizations bootcamp program (UCI Division of Continuing Education).<br/>
-									<br>Since I was young, I always enjoyed games and solving puzzles. Big datasets to me are informative puzzles I want to solve.
+									<br>Since I was young, I always enjoyed solving puzzles. Datasets to me are informative puzzles that lead to a bigger picture.
 										Identifying patterns nobody else sees is exciting and I enjoy the challenge.<br />
 									<br>Before I decided to focus into data analytics, I had worked over <b>five years in a hospital and corporate setting</b> interacting with patients and physicians. As a confident team leader and in combination with my background in healthcare and financial data analysis, I am a strong asset to any team.<br/>
 									<br>Do you want to collaborate? Please contact me by e-mail.
