--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="intro">
 					<h1>Alexandre Van Dessoliers<br />
 					</h1>
-					<p>Data Analyst skilled in SQL, Tableau, and Python
+					<p>Data Analyst skilled in SQL, Python, PowerBI, and Tableau 
 						<!-- <br><a href="https://www.linkedin.com/in/adessoliers/">Linkedin</a> -->
 						<!-- <br><a href="https://github.com/adessoliers">Github</a> -->
 					<ul class="actions">
@@ -58,12 +58,13 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h1>About Me<br />
 									</h1>
-									<p>Hello, my name is Alex and I am a <b>data analyst</b>. I hold a Bachelor's degree in Healthcare Administration (CSU Long Beach)
-										and completed a data analytics & visualizations bootcamp program (UCI Division of Continuing Education).<br/>
-									<br>Since I was young, I always enjoyed solving puzzles. Datasets to me are informative puzzles that lead to a bigger picture.
-										Identifying patterns nobody else sees is exciting and I enjoy the challenge.<br />
-									<br>Before I decided to focus into data analytics, I had worked over <b>five years in a hospital and corporate setting</b> interacting with patients and physicians. As a confident team leader and in combination with my background in healthcare and financial data analysis, I am a strong asset to any team.<br/>
-									<br>Do you want to collaborate? Please contact me by e-mail.
+									<p>Hello, my name is Alex and I am a <b>data analyst</b> with a background in healthcare. I hold a Bachelor's degree in Healthcare Administration (CSU Long Beach) and have five years of direct experience with healthcare professionals and patients.
+									Recently, I have followed my passion in helping organizations succeed by completing a data analytics and visualizations bootcamp program (UCI Division of Continuing Education).<br/>
+									<br>My growing skill set has allowed me to transform data into useful, manageable tools that help discover trends, inform conclusions, and support decision-making processes.
+									I treat datasets as informative puzzles that can be used to add value to any project or business. I enjoy both the challenge of understanding the complexities of a puzzle that others miss as well as realizing
+									the definitive value I add with solving the puzzle for my team.<br />
+									<br>I can confidently say I would be a strong asset to any team and look forward to the challenges ahead.<br/>
+									<br>Do you want to collaborate?<br> Please contact me by phone <i>(714-800-9650)</i> or e-mail <i>(adessoliers@protonmail.com)</i>.
 									</p>
 								</header>
 								<!-- <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
@@ -108,7 +109,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto: alexdessoliers@yahoo.com">alexdessoliers@yahoo.com</a></p>
+								<p><a href="mailto: adessoliers@protonmail.com">adessoliers@protonmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
