--- a/projects.html
+++ b/projects.html
@@ -194,7 +194,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">alexdessoliers@yahoo.com</a></p>
+								<p><a href="#">adessoliers@protonmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
